--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ server:
 spring:
   application:
     name: service-demo
+  security:
+    jwt:
+      cert:
+        pub: public.cert
+
     ## datasource configuration
 datasource:
   name: fsAppByCatering
