--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.service.demo</groupId>
-    <artifactId>service-demo</artifactId>
+    <artifactId>demo-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>service-demo</name>
-    <description>Demo project for Spring Boot</description>
+    <name>demo-service</name>
+    <description>Demo Service project for Spring Boot</description>
 
     <parent>
         <groupId>org.cloud.microservice</groupId>
@@ -24,16 +24,6 @@
             <groupId>org.cloud.microservice</groupId>
             <artifactId>business-spring-boot-starter</artifactId>
             <version>0.0.1-RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
         </dependency>
     </dependencies>
 </project>
