--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
     <description>Demo Service project for Spring Boot</description>
 
     <parent>
-        <groupId>org.cloud.microservice</groupId>
-        <artifactId>business-spring-boot-starter</artifactId>
-        <version>0.0.1-RELEASE</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -24,6 +24,11 @@
             <groupId>org.cloud.microservice</groupId>
             <artifactId>business-spring-boot-starter</artifactId>
             <version>0.0.1-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
