统一服务的构建规范

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.service.demo</groupId>
+    <groupId>fs.service.business</groupId>
     <artifactId>demo-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>demo-service</name>
     <description>Demo Service project for Spring Boot</description>
