--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,10 @@
 ibatis:
   config:
-    aliases: com.service.*.entity
+    aliases: fs.service.business.demoservice.*.entity
   ##mapper locations
   mapper:
     locations:
       test: classpath:mapper/test/*.xml
-      ## 配置dao扫描路径
-    packages:
-      path: com.service.*.dao
 ##eureka configuration
 eureka:
   client:
